# pl0-jit-compiler

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: BundledGTest.cmake  clang-tidy.cmake
pljit/: CMakeLists.txt  main.cpp
pljit/ast/: ASTNode.cpp  ASTNodeVisitorDot.cpp  SemanticAnalyzer.cpp  SymbolTable.cpp
pljit/include/: local.cmake
pljit/include/ast/: ASTNode.hpp  ASTNodeVisitor.hpp  ASTNodeVisitorDot.hpp  SemanticAnalyzer.hpp  SymbolTable.hpp
pljit/include/jit/: JIT.hpp
pljit/include/lexer/: Lexer.hpp  Token.hpp
pljit/include/optimization/: ConstantPropagation.hpp  DeadCodeElimination.hpp  EvaluationContext.hpp  OptimizationPass.hpp
pljit/include/parser/: ParseTreeNode.hpp  ParseTreeNodeVisitor.hpp  ParseTreeNodeVisitorDot.hpp  Parser.hpp
pljit/include/util/: Defer.hpp  SourceCodeManagement.hpp  SourceCodeReference.hpp
pljit/jit/: JIT.cpp
pljit/lexer/: Lexer.cpp  Token.cpp
pljit/optimization/: ConstantPropagation.cpp  DeadCodeElimination.cpp  EvaluationContext.cpp
pljit/parser/: ParseTreeNode.cpp  ParseTreeNodeVisitorDot.cpp  Parser.cpp
pljit/util/: SourceCodeManagement.cpp  SourceCodeReference.cpp
test/: CMakeLists.txt  TestAST.cpp  TestASTDot.cpp  TestJIT.cpp  TestLexer.cpp  TestOptimizationConstantPropagation.cpp  TestOptimizationDeadCodeElimination.cpp  TestOptimizationEvaluation.cpp  TestParser.cpp  TestParserDot.cpp
